# bazel_framework_debugging

./: .gitignore  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  error_message.txt
Singular/: BUILD.bazel
