load("@build_bazel_rules_apple//apple:apple.bzl", "apple_static_xcframework_import")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library_group")

apple_static_xcframework_import(
    name = "Singular.rspm",
    alwayslink = True,
    visibility = ["//:__subpackages__"],
    xcframework_imports = glob(["Singular.xcframework/**"]),
)

swift_library_group(
    name = "Singular",
    deps = [":Singular.rspm"],
    visibility = ["//visibility:public"],
)
